# SimpleRustAPI

./: Cargo.toml  README.md  sample.json  test.sh
src/: beacon.rs  main.rs
src/beacon/: json_parse.rs
