[package]
edition = "2018"
name = "simple_rust_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.1"
hyper = {version = "0.14", features = ["full"]}
serde = {version = "^1.0.101", features = ["derive"]}
serde_json = "^1.0.66"
tokio = {version = "1.9.0", features = ["full"]}
